# note-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/note_crawler/: __init__.py  cli.py  client.py  crawler.py  models.py
tests/: test_models.py
