[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "note-crawler"
version = "0.1.0"
description = "Archive every article from a note.com creator — JSON + Markdown, no login required"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "yut0takagi" }]
keywords = [
    "note",
    "note.com",
    "crawler",
    "scraper",
    "archive",
    "markdown",
    "japanese",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "html2text>=2024.2.26",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
note-crawl = "note_crawler.cli:main"

[project.urls]
Homepage = "https://github.com/yut0takagi/note-crawler"
Repository = "https://github.com/yut0takagi/note-crawler"
Issues = "https://github.com/yut0takagi/note-crawler/issues"
Changelog = "https://github.com/yut0takagi/note-crawler/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/note_crawler"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
